--- a/app/src/main/res/layout/fragment_goal_list_dialog.xml
+++ b/app/src/main/res/layout/fragment_goal_list_dialog.xml
@@ -7,5 +7,5 @@
     android:clipToPadding="false"
     android:paddingTop="@dimen/list_item_spacing_half"
     android:paddingBottom="@dimen/list_item_spacing_half"
-    tools:context=".GoalDialogFragment"
+    tools:context=".ui.home.GoalDialogFragment"
     tools:listitem="@layout/fragment_goal_list_dialog_item" />
