save user data to db

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -39,4 +39,10 @@
         app:popUpTo="@id/progressFragment"
         app:popUpToInclusive="true" />
 
+    <action
+        android:id="@+id/action_global_progressFragment"
+        app:destination="@id/progressFragment"
+        app:popUpTo="@id/settingsFragment"
+        app:popUpToInclusive="true" />
+
 </navigation>
