--- a/app/src/main/res/menu/menu_toolbar_actions_main.xml
+++ b/app/src/main/res/menu/menu_toolbar_actions_main.xml
@@ -9,7 +9,8 @@
 
         <item
             android:id="@+id/menu_item_inclusive"
-            android:title="Inclusive" />
+            android:title="Inclusive"
+            android:visible="false" />
 
     </group>
 
