--- a/app/src/main/res/layout/mp_card_progress.xml
+++ b/app/src/main/res/layout/mp_card_progress.xml
@@ -1,40 +1,47 @@
 <merge xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
     tools:parentTag="androidx.cardview.widget.CardView">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:padding="16dp">
 
         <TextView
             android:id="@+id/tv_goal"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:gravity="center"
-            android:layout_marginTop="16dp"
-            android:layout_marginBottom="6dp"
-            android:textSize="14sp"
-            android:textColor="@color/colorPrimaryText"
-            android:drawableStart="@drawable/ic_event_black_24dp"
+            android:layout_marginBottom="10dp"
             android:drawablePadding="10dp"
+            android:gravity="center_vertical"
+            android:textColor="@color/colorPrimaryText"
+            android:textSize="14sp"
+            app:drawableStartCompat="@drawable/ic_event_black_24dp"
             app:layout_constraintBottom_toTopOf="@id/seekBar"
-            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/btn_set_goal"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_chainStyle="packed"
             tools:text="GOAL 6 months" />
+
+        <Button
+            android:id="@+id/btn_set_goal"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="[Nastavi cilj]"
+            android:textSize="12sp"
+            app:layout_constraintBottom_toBottomOf="@id/tv_goal"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@id/tv_goal"
+            app:layout_constraintTop_toTopOf="@id/tv_goal" />
 
         <SeekBar
             android:id="@+id/seekBar"
             style="@style/ProgressSeekBar"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
             android:layout_marginTop="6dp"
-            android:layout_marginEnd="16dp"
             android:layout_marginBottom="6dp"
             android:focusable="auto"
             app:layout_constraintBottom_toTopOf="@+id/tv_goal_percentage"
@@ -42,35 +49,6 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tv_goal"
             tools:progress="70" />
-
-        <TextView
-            android:id="@+id/tv_my_progress_title"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginEnd="16dp"
-            android:text="@string/mp_smoke_free_label"
-            android:textSize="22sp"
-            android:textColor="@color/colorPrimaryText"
-            app:layout_constraintBottom_toTopOf="@id/tv_progress_value"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tv_goal_percentage" />
-
-        <TextView
-            android:id="@+id/tv_progress_value"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginEnd="16dp"
-            android:layout_marginBottom="24dp"
-            android:textSize="20sp"
-            android:textColor="@color/colorSecondaryText"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tv_my_progress_title"
-            tools:text="10m 28d 11h" />
 
         <TextView
             android:id="@+id/tv_goal_percentage"
@@ -84,6 +62,30 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/seekBar"
             tools:text="70.8%" />
+
+        <TextView
+            android:id="@+id/tv_my_progress_title"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/mp_smoke_free_label"
+            android:textColor="@color/colorPrimaryText"
+            android:textSize="22sp"
+            app:layout_constraintBottom_toTopOf="@id/tv_progress_value"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tv_goal_percentage" />
+
+        <TextView
+            android:id="@+id/tv_progress_value"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textColor="@color/colorSecondaryText"
+            android:textSize="20sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tv_my_progress_title"
+            tools:text="10m 28d 11h" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
