structure and minor fixes

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -17,7 +17,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-            <com.example.sampleapp.ui.views.home.ProgressCardView
+            <com.example.sampleapp.ui.home.views.ProgressCardView
                 android:id="@+id/progressCard"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
