--- a/app/src/main/res/menu/menu_bottom_nav.xml
+++ b/app/src/main/res/menu/menu_bottom_nav.xml
@@ -12,4 +12,8 @@
         android:id="@+id/healthFragment"
         android:icon="@drawable/ic_health_black_24dp"
         android:title="@string/nav_health_title" />
+    <item
+        android:id="@+id/storeFragment"
+        android:icon="@drawable/ic_store_black_24"
+        android:title="@string/nav_store_title" />
 </menu>
