--- a/app/src/main/res/layout/mh_card_view.xml
+++ b/app/src/main/res/layout/mh_card_view.xml
@@ -17,7 +17,7 @@
             android:layout_marginTop="8dp"
             android:layout_marginEnd="16dp"
             android:progress="50"
-            android:progressDrawable="@drawable/mh_progress_bar"
+            android:progressDrawable="@drawable/progress_bar_accent_small"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_progress_value" />
@@ -29,10 +29,10 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="16dp"
-            tools:text="100%"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tv_description" />
+            app:layout_constraintTop_toBottomOf="@id/tv_description"
+            tools:text="100%" />
 
         <TextView
             android:id="@+id/tv_description"
@@ -41,10 +41,10 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="20dp"
             android:layout_marginEnd="16dp"
-            tools:text="After 20 minutes: Your blood pressure and heart rate decrease."
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            tools:text="After 20 minutes: Your blood pressure and heart rate decrease." />
 
         <TextView
             android:id="@+id/tv_status"
@@ -52,11 +52,11 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:layout_marginBottom="20dp"
-            tools:text="Achieved"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/progressBar" />
+            app:layout_constraintTop_toBottomOf="@+id/progressBar"
+            tools:text="Achieved" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
