user with store items relation

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
 
     <color name="white">#fff</color>
     <color name="black">#000</color>
+    <color name="lightGreen">#7CB342</color>
 </resources>
