--- a/app/src/main/res/layout/fragment_goal_list_dialog.xml
+++ b/app/src/main/res/layout/fragment_goal_list_dialog.xml
@@ -16,7 +16,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
             android:layout_marginTop="10dp"
-            android:text="[Cilji:]"
+            android:text="@string/goal_bottom_sheet_title"
             android:textColor="@color/black"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
