--- a/app/src/main/res/layout/mp_card_progress.xml
+++ b/app/src/main/res/layout/mp_card_progress.xml
@@ -29,7 +29,8 @@
             android:id="@+id/btn_set_goal"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="[Nastavi cilj]"
+            android:text="@string/goal_btn_set_title"
+            android:textAllCaps="false"
             android:textSize="12sp"
             app:layout_constraintBottom_toBottomOf="@id/tv_goal"
             app:layout_constraintEnd_toEndOf="parent"
