--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -3,10 +3,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/progressFragment">
+    app:startDestination="@id/homeFragment">
 
     <fragment
-        android:id="@+id/progressFragment"
+        android:id="@+id/homeFragment"
         android:name="com.example.sampleapp.ui.home.HomeFragment"
         android:label="fragment_progress"
         tools:layout="@layout/fragment_home" />
@@ -42,12 +42,12 @@
     <action
         android:id="@+id/action_global_inclusive_settingsFragment"
         app:destination="@id/settingsFragment"
-        app:popUpTo="@id/progressFragment"
+        app:popUpTo="@id/homeFragment"
         app:popUpToInclusive="true" />
 
     <action
         android:id="@+id/action_global_progressFragment"
-        app:destination="@id/progressFragment"
+        app:destination="@id/homeFragment"
         app:popUpTo="@id/settingsFragment"
         app:popUpToInclusive="true" />
 
