--- a/app/src/main/res/layout/mt_item_image.xml
+++ b/app/src/main/res/layout/mt_item_image.xml
@@ -1,13 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ImageView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="150dp"
     android:layout_height="150dp"
-    xmlns:tools="http://schemas.android.com/tools">
-
-    <ImageView
-        android:id="@+id/img_badge"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:src="@drawable/cig_not_smoked_20" />
-
-</FrameLayout>
+    tools:src="@drawable/cig_not_smoked_20"
+    android:contentDescription="badge" />
