--- a/app/src/main/res/menu/menu_toolbar_actions_main.xml
+++ b/app/src/main/res/menu/menu_toolbar_actions_main.xml
@@ -1,17 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <group android:id="@+id/group_settings">
-
-        <item
-            android:id="@+id/menu_item_settings"
-            android:title="@string/menu_settings_title" />
-
-        <item
-            android:id="@+id/menu_item_inclusive"
-            android:title="Inclusive"
-            android:visible="false" />
-
-    </group>
+    <item
+        android:id="@+id/menu_item_settings"
+        android:icon="@drawable/ic_settings_24"
+        android:title="@string/menu_settings_title"
+        app:showAsAction="always" />
 
 </menu>
