--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -8,31 +8,31 @@
     <fragment
         android:id="@+id/homeFragment"
         android:name="com.example.sampleapp.ui.home.HomeFragment"
-        android:label="fragment_progress"
+        android:label="@string/app_name"
         tools:layout="@layout/fragment_home" />
 
     <fragment
         android:id="@+id/healthFragment"
         android:name="com.example.sampleapp.ui.health.HealthFragment"
-        android:label="fragment_health"
+        android:label="@string/nav_health_title"
         tools:layout="@layout/fragment_health" />
 
     <fragment
         android:id="@+id/trophiesFragment"
         android:name="com.example.sampleapp.ui.trophies.TrophiesFragment"
-        android:label="fragment_trophies"
+        android:label="@string/nav_trophies_title"
         tools:layout="@layout/fragment_trophies" />
 
     <fragment
         android:id="@+id/settingsFragment"
         android:name="com.example.sampleapp.ui.settings.SettingsFragment"
-        android:label="SettingsFragment"
+        android:label="@string/nav_settings_title"
         tools:layout="@layout/fragment_settings" />
 
     <fragment
         android:id="@+id/storeFragment"
         android:name="com.example.sampleapp.ui.store.StoreFragment"
-        android:label="fragment_store"
+        android:label="@string/nav_store_title"
         tools:layout="@layout/fragment_store" />
 
     <action
