fix date picker and notification triggers

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -42,8 +42,7 @@
     <action
         android:id="@+id/action_global_inclusive_settingsFragment"
         app:destination="@id/settingsFragment"
-        app:popUpTo="@id/homeFragment"
-        app:popUpToInclusive="true" />
+        app:popUpTo="@id/nav_graph" />
 
     <action
         android:id="@+id/action_global_progressFragment"
