--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -47,33 +47,32 @@
                         android:id="@+id/tv_stats_title"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:textSize="16sp"
                         android:layout_marginStart="16dp"
-                        android:layout_marginEnd="16dp"
                         android:layout_marginTop="8dp"
-                        app:layout_constraintTop_toTopOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintEnd_toEndOf="parent"
+                        android:layout_marginEnd="16dp"
+                        android:text="@string/mp_stats_card_title"
                         android:textColor="@color/colorPrimaryText"
-                        android:text="@string/mp_stats_card_title" />
+                        android:textSize="16sp"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
 
                     <androidx.recyclerview.widget.RecyclerView
                         android:id="@+id/rv_stats"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:overScrollMode="never"
                         android:layout_marginTop="8dp"
-                        app:layout_constraintTop_toBottomOf="@id/tv_stats_title"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintEnd_toEndOf="parent"
+                        android:overScrollMode="never"
                         app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@id/tv_stats_title"
                         tools:itemCount="3"
                         tools:listitem="@layout/mp_item_stats" />
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
             </androidx.cardview.widget.CardView>
-
 
             <androidx.cardview.widget.CardView
                 android:id="@+id/card_history"
@@ -96,12 +95,12 @@
                         android:id="@+id/tv_card_history_title"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:text="@string/mp_history_card_title"
-                        android:textSize="16sp"
-                        android:textColor="@color/colorPrimaryText"
-                        android:layout_marginTop="8dp"
                         android:layout_marginStart="16dp"
+                        android:layout_marginTop="8dp"
                         android:layout_marginEnd="16dp"
+                        android:text="@string/mp_history_card_title"
+                        android:textColor="@color/colorPrimaryText"
+                        android:textSize="16sp"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
